--- a/index.html
+++ b/index.html
@@ -34,43 +34,36 @@
         <a target='_blank' href="https://drive.google.com/file/d/1KrQAryIAAbqHtX4g9QyxkWQ2gT_K1xev/view?usp=sharing"><i
                 class="far fa-file-alt"></i>Curriculum</a>
     </div>
-    <header id="header" class="main-header">
-        <div class="logo" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-            data-aos-offset="0" data-aos-duration="3000">
+    <header id="header" class="main-header" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+    data-aos-offset="0" data-aos-duration="3000">
+        <div class="logo" >
             <audio src="dist/img/Dreamy_80_Bm_mp3.mp3" id="audio"></audio>
-            <i data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000" data-aos-offset="0"
-                data-aos-duration="3000" class="fa-solid fa-volume-high" id="play" onclick="play()"></i>
+            <i  class="fa-solid fa-volume-high" id="play" onclick="play()"></i>
             <a id="logo" href="#banner">lea<span>dev</span></a>
         </div>
         <input type="checkbox" class="menu-btn" id="menu-btn">
         <label for="menu-btn" class="menu-icon">
             <span class="menu-icon_line"></span>
         </label>
-        <ul class="nav-links">
-            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-                data-aos-offset="0" data-aos-duration="3000">
+        <ul class="nav-links" >
+            <li class="nav-link" >
                 <a href="#banner">Home</a>
             </li>
-            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-                data-aos-offset="0" data-aos-duration="3000">
+            <li class="nav-link" >
                 <a href="#about-me">About me</a>
 
             </li>
-            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-                data-aos-offset="0" data-aos-duration="3000">
+            <li class="nav-link" >
                 <a href="#portfolio">Portfolio</a>
 
             </li>
-            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-                data-aos-offset="0" data-aos-duration="3000">
+            <li class="nav-link" >
                 <a href="#hard-skills">Stack</a>
             </li>
-            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-                data-aos-offset="0" data-aos-duration="3000">
+            <li class="nav-link" >
                 <a href="#soft-skills">Soft Skills</a>
             </li>
-            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-                data-aos-offset="0" data-aos-duration="3000">
+            <li class="nav-link" >
                 <a id="conta" href="#contact">Contact</a>
             </li>
         </ul>
@@ -85,7 +78,7 @@
             </div>
             <div class="banner-content">
                 <div class="banner-titulo snap" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
-                    data-aos-delay="0" data-aos-offset="0" data-aos-duration="3000">
+                     data-aos-offset="0" data-aos-duration="3000">
                     <div>
                         <h1>Leandro Falcón</h1>
                     </div>
@@ -178,7 +171,7 @@
                     </div>
                     <div class="card">
                         <div class="box">
-                            <img id="106" src="dist/img/sitioInformativoHotel.png" alt="">
+                            <img id="107" src="dist/img/sitioInformativoHotel.png" alt="">
                             <div class="text">Sitio Info Hotel</div>
                             <p>Freelance</p>
                             
