--- a/index.html
+++ b/index.html
@@ -45,26 +45,31 @@
         <label for="menu-btn" class="menu-icon">
             <span class="menu-icon_line"></span>
         </label>
-        <ul class="nav-links" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
-        data-aos-offset="0" data-aos-duration="3000" >
-            <li class="nav-link" >
+        <ul class="nav-links"  >
+            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+            data-aos-offset="0" data-aos-duration="3000">
                 <a href="#banner">Home</a>
             </li>
-            <li class="nav-link" >
+            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+            data-aos-offset="0" data-aos-duration="3000">
                 <a href="#about-me">About me</a>
 
             </li>
-            <li class="nav-link" >
+            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+            data-aos-offset="0" data-aos-duration="3000">
                 <a href="#portfolio">Portfolio</a>
 
             </li>
-            <li class="nav-link" >
+            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+            data-aos-offset="0" data-aos-duration="3000">
                 <a href="#hard-skills">Stack</a>
             </li>
-            <li class="nav-link" >
+            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+            data-aos-offset="0" data-aos-duration="3000">
                 <a href="#soft-skills">Soft Skills</a>
             </li>
-            <li class="nav-link" >
+            <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
+            data-aos-offset="0" data-aos-duration="3000">
                 <a id="conta" href="#contact">Contact</a>
             </li>
         </ul>
