fix menu nav disappear

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </li>
         </ul>
     </header>
-    <main>
+    <main style="color: black;">
         <div class="banner content" id="banner">
             <div class="banner-video">
                 <video autobuffer loop="" autoplay muted>
@@ -123,13 +123,13 @@
 
         </div>
 
-        <div class="portfolio" id="portfolio">
+        <div class="portfolio" id="portfolio" data-aos="fade-out" data-aos-duration="1000">
             <!-- Ventana modal, por defecto no visiblel -->
             <div id="ventanaModal" class="modal">
                 <div class="contenido-modal"></div>
                 <span class="cerrar">&times;</span>
             </div>
-            <div class="max-width">
+            <div class="max-width" >
                 <h3 data-aos="fade-left" data-aos-duration="1000">Portfolio</h3>
                 <div class="carousel owl-carousel">
                     <div  class="card">
@@ -193,10 +193,10 @@
                     </div>
                     
                 </div>
-                <div class="newOld">
+                <!-- <div class="newOld">
                     <span>new &#9754</span>
                     <span>&#9755 old </span>
-                </div>
+                </div> -->
 
             </div>
             
@@ -377,7 +377,7 @@
                         <a target='_blank' href="https://api.whatsapp.com/send?phone=5493548583686"><i
                                 class="fab fa-whatsapp"></i></a>
                         <a target='_blank'
-                            href="https://drive.google.com/file/d/1VAIhd_rbayCU6h3ntX3z29q9ygoZFx2e/view?usp=sharing"><i
+                        href="https://drive.google.com/file/d/1KrQAryIAAbqHtX4g9QyxkWQ2gT_K1xev/view?usp=sharing"><i
                                 class="far fa-file-alt"></i></a>
                     </div>
                 </div>
