--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         </div>
 
-        <div class="portfolio" id="portfolio" data-aos="fade-out" data-aos-duration="1000">
+        <div class="portfolio" id="portfolio" data-aos="fade-out" data-aos-duration="200">
             <!-- Ventana modal, por defecto no visiblel -->
             <div id="ventanaModal" class="modal">
                 <div class="contenido-modal"></div>
@@ -198,6 +198,7 @@
 
 
                 </div>
+                <h6 class="swippe">Swippe</h6>
                 <div class="scroll-arrow pf prev"></div>
                 <div class="scroll-arrow pf"></div>
                 <!-- <div class="newOld">
@@ -395,7 +396,7 @@
 
         <div class="credits">
             <a href="#banner"><span>lea</span>dev</a>
-            <small>Developed and designed by Leandro Falcón</small>
+            <small>Developed and designed <br>by Leandro Falcón</small>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
