transicion de entrada portfolio

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         </div>
 
-        <div class="portfolio" id="portfolio" data-aos="fade-out" data-aos-duration="200">
+        <div class="portfolio" id="portfolio">
             <!-- Ventana modal, por defecto no visiblel -->
             <div id="ventanaModal" class="modal">
                 <div class="contenido-modal"></div>
