social position mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div id="preloader"></div>
-    <div class="social">
+    <div class="social hidden">
         <a target="_blank" href="https://github.com/FalconLeandro"><i class="fab fa-github-square"></i>GitHub</a>
         <a target='_blank' href="https://www.linkedin.com/in/leandro-falcon/"><i
                 class="fab fa-linkedin"></i>LinkedIn</a>
