--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/4a214415fb.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 
@@ -76,6 +77,7 @@
     </header>
     <main style="color: black;">
         <div class="banner content" id="banner">
+            <div id="particles-js"></div>
             <div class="banner-video">
                 <video autobuffer loop="" autoplay muted>
                     <source src="dist/img/videooFog.mp4" type="video/mp4">
@@ -405,6 +407,7 @@
     </script>
     <!-- <script src="dist/js/animado.js"></script> -->
     <!-- <script src="dist/js/sonidos.js"></script> -->
+    <script src="dist/js/particles.js"></script>
     <script src="dist/js/textChanger.js"></script>
     <script async src="dist/js/interactive-video.js"></script>
     <script src="dist/js/main.js"></script>
