--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leandro Falcón | Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/4a214415fb.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -23,7 +19,9 @@
 </head>
 
 <body>
+    <!-- PRELOADER -->
     <div id="preloader"></div>
+    <!-- SOCIAL -->
     <div class="social hidden">
         <a target="_blank" href="https://github.com/FalconLeandro"><i class="fab fa-github-square"></i>GitHub</a>
         <a target='_blank' href="https://www.linkedin.com/in/leandro-falcon/"><i
@@ -54,12 +52,10 @@
             <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
                 data-aos-offset="0" data-aos-duration="3000">
                 <a href="#about-me">About me</a>
-
             </li>
             <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
                 data-aos-offset="0" data-aos-duration="3000">
                 <a href="#portfolio">Portfolio</a>
-
             </li>
             <li class="nav-link" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="2000"
                 data-aos-offset="0" data-aos-duration="3000">
@@ -81,7 +77,6 @@
             <div class="banner-video">
                 <video autobuffer loop="" autoplay muted>
                     <source src="dist/img/videooFog.mp4" type="video/mp4">
-
                 </video>
             </div>
             <div class="banner-content">
@@ -104,7 +99,6 @@
                     <div class="scroll-arrow"><a href="#about-me"></a></div>
                 </div>
 
-
                 <div class="about-me " id="about-me">
                     <!-- <input id="about-me" type="button" value=""> -->
                     <div class="img">
@@ -115,19 +109,14 @@
                         <div id="texto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="200"
                             data-aos-duration="1000">
                             <h2 id="hi">Hi! I am Lea</h2>
-
                         </div>
-
                     </div>
-
                 </div>
-
             </div>
-
         </div>
 
         <div class="portfolio" id="portfolio">
-            <!-- Ventana modal, por defecto no visiblel -->
+            <!-- Ventana modal, por defecto no visible -->
             <div id="ventanaModal" class="modal">
                 <div class="contenido-modal"></div>
                 <span class="cerrar">&times;</span>
@@ -180,19 +169,15 @@
                         </div>
                         <p class="year">July 2022</p>
                     </div>
-                   
+
                     <div class="card">
                         <div class="box">
                             <img id="106" src="dist/img/sitioInformativoHotel.png" alt="">
                             <div class="text">Sitio Info Hotel</div>
                             <p>Freelance</p>
-
                         </div>
                         <p class="year">February 2021</p>
-
                     </div>
-
-
                 </div>
                 <h6 class="swippe">Swippe</h6>
                 <div class="scroll-arrow pf prev"></div>
@@ -201,10 +186,9 @@
                     <span>new &#9754</span>
                     <span>&#9755 old </span>
                 </div> -->
-
             </div>
-
         </div>
+
         <div class="skillset" id="skillset">
             <div id="hard-skills">
                 <h3 data-aos="fade-left" data-aos-duration="1000">Stack</h3>
@@ -321,11 +305,7 @@
                             data-aos-offset="-100"></i>
                     </div>
                 </div>
-
             </div>
-
-        </div>
-        </div>
         </div>
         <div class="contact" id="contact">
             <h3 data-aos="fade-left" data-aos-duration="1000">Contact</h3>
@@ -333,7 +313,7 @@
                 data-aos="fade-right" data-aos-duration="1000">
                 <input type="hidden" name="_next" value=https://falconleandro.github.io/ThanksPagePortfolio/ />
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_subject" value="Mensaje desde el Portfolio wachin!!!">
+                <input type="hidden" name="_subject" value="Mensaje desde el Portfolio!!!">
                 <div class="row100">
                     <div class="col">
                         <div class="inputBox">
@@ -389,18 +369,21 @@
         </div>
     </main>
     <footer>
-
         <div class="credits">
             <a href="#banner"><span>lea</span>dev</a>
             <small>Developed and designed <br>by Leandro Falcón</small>
         </div>
     </footer>
+
+    <!-- ANIMACIONES -->
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-    <!-- <script src="dist/js/animado.js"></script> -->
-    <!-- <script src="dist/js/sonidos.js"></script> -->
+
+
+
     <script src="dist/js/particles.js"></script>
     <script src="dist/js/textChanger.js"></script>
     <script async src="dist/js/interactive-video.js"></script>
@@ -408,8 +391,10 @@
     <script src="dist/js/carrusel.js"></script>
     <script src="dist/js/cerrarMenu.js"></script>
     <script src="dist/js/smoothScroll.js"></script>
-    <!-- <script src="dist/js/imgChanger.js"></script> -->
     <script src="dist/js/modal.js"></script>
+
+    <!-- PRELOADER -->
+
     <script async>
         var loader = document.getElementById('preloader');
         window.addEventListener('load', function () {
@@ -417,6 +402,9 @@
             loader.style.opacity = '0';
         })
     </script>
+
+    <!-- AUDIO -->
+
     <script async>
         function play() {
             var audio = document.getElementById('audio');
