mediaquery fotoperfil appear

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
                 <div class="about-me " id="about-me">
                     <!-- <input id="about-me" type="button" value=""> -->
-                    <div class="img">
-                        <img id="fotoPerfil" src="dist/img/fotoPerfil2bis.jpg" alt="fotoPerfil" data-aos="fade-zoom-in"
-                            data-aos-easing="ease-in-back" data-aos-offset="200" data-aos-duration="500">
+                    <div class="img" id="img">
+                        <!-- <img id="fotoPerfil" src="dist/img/fotoPerfil2bis.jpg" alt="fotoPerfil" data-aos="fade-zoom-in"
+                            data-aos-easing="ease-in-back" data-aos-offset="200" data-aos-duration="500"> -->
                     </div>
                     <div class="about-me_texto" id="about-me_texto">
                         <div id="texto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="200"
@@ -392,6 +392,7 @@
     <script src="dist/js/cerrarMenu.js"></script>
     <script src="dist/js/smoothScroll.js"></script>
     <script src="dist/js/modal.js"></script>
+    <script src="dist/js/imgChanger.js"></script>
 
     <!-- PRELOADER -->
 
