--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
 
     <script src="dist/js/particles.js"></script>
     <script src="dist/js/textChanger.js"></script>
-    <script async src="dist/js/interactive-video.js"></script>
-    <script src="dist/js/main.js"></script>
+    <script async src="dist/js/interactiveVideo.js"></script>
+    <script src="dist/js/hidingWithScrolling.js"></script>
     <script src="dist/js/carrusel.js"></script>
     <script src="dist/js/cerrarMenu.js"></script>
     <script src="dist/js/smoothScroll.js"></script>
